@@ -758,6 +758,19 @@
           </p>
           <hr class="soften" />
 
+          <img class="left" src="img/applications/opera.png" />
+          <p><b>Opera</b> is a fast, secure, and user-friendly web
+          browser. It includes web developer tools, news aggregation,
+          and the ability to compress data via Opera Turbo on congested
+          networks.</p>
+          <p class="text-right">
+          <a class="btn" href="cmd://link?http://www.opera.com/"><span class="fa fa-info"></span></a>
+          <a class="opera-stable-install btn btn-success" href="cmd://apt-install?opera-stable"><span class="fa fa-download"></span>&nbsp; Install</a>
+          <a class="opera-stable-reinstall btn" href="cmd://apt-install?opera-stable"><span class="fa fa-refresh"></span>&nbsp; Reinstall</a>
+          <a class="opera-stable-remove btn btn-danger" href="cmd://apt-remove?opera-stable"><span class="fa fa-trash"></span>&nbsp; Remove</a>
+          </p>
+          <hr class="soften" />
+
           <img class="left" src="img/applications/remmina.png" />
           <p><b>Remmina</b> is a remote desktop connection client able to display and control
           a remote desktop session. It supports multiple network protocols in an integrated and
