@@ -329,6 +329,10 @@ def process_packages(packages, action):
         if codename == 'precise' or codename == 'trusty':
             transaction.update_cache = True
             transaction.source_to_update = 'mumble-ubuntu-release-'+codename+'.list'
+    elif 'opera-stable' in packages:
+        subprocess.call(['pkexec', '/usr/lib/ubuntu-mate/ubuntu-mate-welcome-repository-installer', 'opera-stable', action])
+        transaction.update_cache = True
+        transaction.source_to_update = 'opera.list'
     elif 'pithos' in packages:
         subprocess.call(['pkexec', '/usr/lib/ubuntu-mate/ubuntu-mate-welcome-repository-installer', 'pithos', action])
         if codename == 'precise' or codename == 'trusty':
@@ -560,14 +564,15 @@ class AppView(WebKit.WebView):
         'google-musicmanager-beta', 'google-talkplugin', 'handbrake',
         'hardinfo', 'icedtea-7-plugin', 'inkscape', 'insync',
         'libavcodec-extra', 'libdvdcss2', 'makemkv-bin', 'meld',
-        'minecraft-installer', 'minecraft-server-installer', 'mumble', 'pavucontrol',
-        'pithos', 'pitivi', 'planner', 'pysolfc', 'rapid-photo-downloader',
-        'redshift', 'remmina', 'scribus', 'simplescreenrecorder', 'skype',
-        'software-center', 'spideroakone', 'spotify-client',
-        'steam-launcher', 'stellarium', 'supertuxkart', 'sweethome3d', 'synapse',
-        'synaptic', 'syncthing', 'telegram', 'terminator',
-        'ubuntu-sdk', 'uget', 'variety', 'veracrypt', 'virtualbox-5.0',
-        'workrave', 'x2goclient', 'x2goserver', 'zim']:
+        'minecraft-installer', 'minecraft-server-installer', 'mumble',
+        'opera-stable', 'pavucontrol', 'pithos', 'pitivi', 'planner',
+        'pysolfc', 'rapid-photo-downloader', 'redshift', 'remmina',
+        'scribus', 'simplescreenrecorder', 'skype', 'software-center',
+        'spideroakone', 'spotify-client', 'steam-launcher', 'stellarium',
+        'supertuxkart', 'sweethome3d', 'synapse', 'synaptic', 'syncthing',
+        'telegram', 'terminator', 'ubuntu-sdk', 'uget', 'variety',
+        'veracrypt', 'virtualbox-5.0', 'workrave', 'x2goclient',
+        'x2goserver', 'zim']:
             if package == 'virtualbox-5.0':
                 css_class = 'virtualbox'
             else:
