@@ -17,7 +17,8 @@ ubuntu-mate-welcome (16.04.1~xenial1.1) xenial; urgency=medium
   [ Martin Wimpress ]
   * Added miscellaneous tasks to update cache, fix an incomplete install
   and fix broken dependencies.
-  * Added 0 A.D, Bazaar, Caja Share, Dia, Git, Minecraft Server and Stellarium.
+  * Added 0 A.D, Bazaar, Caja Share, Dia, Git, Minecraft Server, Opera
+  and Stellarium.
   * Updated Dropbox, VeraCrypt and X2Go.
   * Installing Adobe Flash now uses flashplugin-installer.
   * Removed obsolete code.
